--- a/packages/rxjs-state/package.json
+++ b/packages/rxjs-state/package.json
@@ -9,5 +9,11 @@
     "fix": "eslint --fix \"src/**/*.ts*\" && prettier --write \"src/**/*.(ts*|scss)\""
   },
   "author": "David Lai",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lodash.clonedeep": "^4.5.0"
+  },
+  "peerDependencies": {
+    "rxjs": "^7.8.1"
+  }
 }
