--- a/packages/rx-hub/package.json
+++ b/packages/rx-hub/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rxjs-state",
+  "name": "rx-hub",
   "version": "0.0.0",
   "description": "State management with rxjs",
   "main": "index.js",
