--- a/packages/rx-flow/package.json
+++ b/packages/rx-flow/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rx-hub",
+  "name": "rx-flow",
   "version": "0.0.0",
   "description": "State management with rxjs",
   "main": "index.js",
