rename to rxjs-hub

--- a/packages/rxjs-hub/package.json
+++ b/packages/rxjs-hub/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rx-flow",
+  "name": "rxjs-hub",
   "version": "0.0.0",
   "description": "State management with rxjs",
   "main": "index.js",
