--- a/package.json
+++ b/package.json
@@ -15,21 +15,22 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash.clonedeep": "^4.5.7",
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "rxjs": "^7.8.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "lerna": "^6.6.2",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "rxjs": "^7.8.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   }
 }
