--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fix": "npm run fix --workspaces"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
