--- a/packages/hubfx/package.json
+++ b/packages/hubfx/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "react-scripts test",
+    "build": "rimraf dist && rollup --config",
     "lint": "eslint --max-warnings 0 \"src/**/*.ts*\" && prettier --check src/",
     "fix": "eslint --fix \"src/**/*.ts*\" && prettier --write \"src/**/*.(ts*|scss)\""
   },
