--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hubfx/core",
+  "name": "@hubfx/forms",
   "version": "0.0.0",
   "description": "State management with rxjs",
   "main": "index.js",
@@ -12,6 +12,7 @@
   "author": "David Lai",
   "license": "ISC",
   "dependencies": {
+    "@hubfx/core": "*",
     "lodash.clonedeep": "^4.5.0"
   },
   "peerDependencies": {
