--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "npm run build -w packages/core",
+    "link-packages": "npm link --workspaces --if-present && npm link @hubfx/core --workspace=@hubfx/forms",
+    "build": "npm run build -w packages/core && npm run build -w packages/forms",
     "test": "npm run test --workspaces --if-present",
     "lint": "npm run lint --workspaces",
     "fix": "npm run fix --workspaces"
