--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@hubfx/core",
   "description": "State management with rxjs",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "react-scripts test",
     "build": "rimraf dist && rollup --config",
