--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
+    "@types/jest": "^29.5.2",
     "@types/lodash.clonedeep": "^4.5.7",
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
@@ -26,6 +26,8 @@
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "lerna": "^6.6.2",
     "prettier": "^2.6.2",
     "react": "^18.2.0",
@@ -34,6 +36,7 @@
     "rollup": "^2.60.2",
     "rollup-plugin-typescript2": "^0.31.1",
     "rxjs": "^7.8.1",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   }
