use react scripts test for now

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,7 +6,7 @@
     "dist"
   ],
   "scripts": {
-    "test": "jest",
+    "test": "react-scripts test",
     "build": "rimraf dist && rollup --config",
     "lint": "eslint --max-warnings 0 \"src/**/*.ts*\" && prettier --check src/",
     "fix": "eslint --fix \"src/**/*.ts*\" && prettier --write \"src/**/*.(ts*|scss)\""
