--- a/packages/react-forms/tsconfig.json
+++ b/packages/react-forms/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
+    "jsx": "react",
     "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "declaration": true,
+    "declaration": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*"]
 }
