--- a/package.json
+++ b/package.json
@@ -13,6 +13,19 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.0",
+    "@storybook/addon-essentials": "^7.0.26",
+    "@storybook/addon-interactions": "^7.0.26",
+    "@storybook/addon-links": "^7.0.26",
+    "@storybook/addon-storyshots": "^7.0.27",
+    "@storybook/addon-styling": "^1.3.2",
+    "@storybook/blocks": "^7.0.26",
+    "@storybook/jest": "^0.1.0",
+    "@storybook/manager-api": "^7.0.27",
+    "@storybook/react": "^7.0.26",
+    "@storybook/react-vite": "^7.0.26",
+    "@storybook/test-runner": "^0.11.0",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/theming": "^7.0.27",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,6 +36,7 @@
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
+    "bootstrap": "^4.6.0",
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -36,6 +50,7 @@
     "rollup": "^2.60.2",
     "rollup-plugin-typescript2": "^0.31.1",
     "rxjs": "^7.8.1",
+    "storybook": "^7.0.26",
     "ts-jest": "^29.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
