--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,5 +15,8 @@
   "license": "ISC",
   "peerDependencies": {
     "rxjs": "^7.8.1"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   }
 }
