--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -19,5 +19,8 @@
   },
   "peerDependencies": {
     "rxjs": "^7.8.1"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   }
 }
